# facesim

./: .gitignore  Taskfile.yml  pyproject.toml  tasks.py
facesim/: __init__.py  fs.py  model.py  train.py
