[tool.poetry]
name = "facesim"
version = "0.0.0"
description = ""
authors = ["Gilad Kutiel <gilad.kutiel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dlib = "^19.24.6"
opencv-python = "^4.11.0.86"
numpy = "^2.2.2"
torch = {version = "^2.6.0+cpu", source = "pytorch"}
torchvision = {version = "^0.21.0+cpu", source = "pytorch"}
typer = "^0.15.1"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
go-task-bin = "^3.41.0"
kaggle = "^1.6.17"
lightning = "^2.5.0.post0"
tensorboard = "^2.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"
